# swarm_robots_formation

./: CMakeLists.txt  package.xml
include/: multi_turtlebot.launch
src/: listener.cpp  moving_foward.cpp  relative_distance_calculator.cpp  virtual_force.cpp
